ajout dives vides

--- a/exercise4.html
+++ b/exercise4.html
@@ -15,8 +15,11 @@
         <div id="rec3">3</div>
         <div id="rec4">4</div>
         <div id="rec5">5</div>
+        <div></div>
+        <div></div>
         <div id="rec6">6</div>
         <div id="rec7">7</div>
+        <div></div>
         <div id="rec8">8</div>
         <div id="rec9">9</div>
     </section>
